--- a/CSS-portfolio/index.html
+++ b/CSS-portfolio/index.html
@@ -1,1 +1,21 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Portfolio - Vaibhav Singh</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <section class="intro">
+        <p class="name">Hi, my name is <span>Vaibhav Singh.</span></p>
 
+        <h2>I develop the front end of websites.</h2>
+
+        <p>I'm a developer specializing in HTML, CSS, JavaScript, Python.</p>
+
+        <p>Currently, I'm trying to switch to a software developer role.</p>
+    </section>
+</body>
+</html>
