Update HTML CSS

--- a/CSS-portfolio/index.html
+++ b/CSS-portfolio/index.html
@@ -5,9 +5,41 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio - Vaibhav Singh</title>
+
     <link rel="stylesheet" href="style.css">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+
+    <link href="https://fonts.googleapis.com/css2?family=Oxygen&family=Oxygen+Mono&display=swap" rel="stylesheet">
 </head>
 <body>
+    <nav class="nav-bar">
+        <ul>
+            <li>
+                <a href="#">Vaibhav Singh</a>
+            </li>
+            <li>
+                <a href="#">Projects</a>
+            </li>
+            <li>
+                <a href="#">About</a>
+            </li>
+            <li>
+                <a href="#">Contact</a>
+            </li>
+            <li>
+                <a href="#">LinkedIn</a>
+            </li>
+            <li>
+                <a href="#">GitHub</a>
+            </li>
+            <li>
+                <a href="#">Resume</a>
+            </li>
+        </ul>
+    </nav>
     <section class="intro">
         <p class="name">Hi, my name is <span>Vaibhav Singh.</span></p>
 
@@ -16,6 +48,16 @@
         <p>I'm a developer specializing in HTML, CSS, JavaScript, Python.</p>
 
         <p>Currently, I'm trying to switch to a software developer role.</p>
+    </section>
+
+    <section class="contact">
+        <h3>Contact me</h3>
+        <p>
+            I'm always interested in hearing about new developer roles and collaborations.
+        </p>
+        <p>
+            <a href="mailto: vaibhavsinghr.08@gmail.com">Email me</a>
+        </p>
     </section>
 </body>
 </html>
