--- a/CSS-portfolio/index.html
+++ b/CSS-portfolio/index.html
@@ -13,30 +13,44 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 
     <link href="https://fonts.googleapis.com/css2?family=Oxygen&family=Oxygen+Mono&display=swap" rel="stylesheet">
+
+    <script src="https://kit.fontawesome.com/7e606c76e8.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <nav class="nav-bar">
         <ul>
             <li>
-                <a href="#">Vaibhav Singh</a>
+                <h1>
+                    <a href="#index.html">
+                        <span class="fa-sharp fa-solid fa-file-code" style="font-size: 100%;"
+                         aria-hidden="true"></span>
+                         <span>Vaibhav Singh</span>
+                    </a>
+                </h1>
             </li>
             <li>
-                <a href="#">Projects</a>
+                <a href="#projects">Projects</a>
             </li>
             <li>
-                <a href="#">About</a>
+                <a href="#about.html">About</a>
             </li>
             <li>
-                <a href="#">Contact</a>
+                <a href="#contact">Contact</a>
             </li>
             <li>
-                <a href="#">LinkedIn</a>
+                <a href="https://www.linkedin.com/in/vaibhavsinghdev/">
+                    <span class="fa-brands fa-linkedin" aria-hidden="true"></span>
+                    <span class="sr-only">LinkedIn</span>
+                </a>
             </li>
             <li>
-                <a href="#">GitHub</a>
+                <a href="https://www.github.com/VaibhavSinghDev/">
+                    <span class="fa-brands fa-square-github" aria-hidden="true"></span>
+                    <span class="sr-only">GitHub</span>
+                </a>
             </li>
             <li>
-                <a href="#">Resume</a>
+                <a href="#" class="button">Resume</a>
             </li>
         </ul>
     </nav>
