--- a/calculator-project/index.html
+++ b/calculator-project/index.html
@@ -1,1 +1,39 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Calculator</title>
+    <link rel="stylesheet" href="css/style.css">
+    
+</head>
+<body>
+    <div class="calculator">
+        <section class="output">
+            <div class="previous-op-output" data-previous-operand></div>
+            <div class="present-op-output" data-current-operand></div>
+        </section>
 
+        <button class="span-two" data-all-clear>C</button>
+        <button data-delete>←</button>
+        <button data-operation>÷</button>
+        <button data-number>7</button>
+        <button data-number>8</button>
+        <button data-number>9</button>
+        <button data-operation> X </button>
+        <button data-number>4</button>
+        <button data-number>5</button>
+        <button data-number>6</button>
+        <button data-operation> - </button>
+        <button data-number>1</button>
+        <button data-number>2</button>
+        <button data-number>3</button>
+        <button data-operation>+</button>
+        <button class="span-three" data-number>0</button>
+        <button data-equals> = </button>
+    </div>
+
+    <script src="js/script.js"></script>
+</body>
+</html>
